# unju-perps

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  RFC-001-MCP-SERVER.md  RFC-002-AGENT-WALLET.md  pyproject.toml
examples/: agent_tool.py  basic_trading.py  test_server.py
tests/: __init__.py  test_client.py  test_risk.py
unju_perps/: __init__.py  __main__.py  client.py  exceptions.py  risk.py  server.py  types.py  utils.py  wallet.py
unju_perps/views/: dashboard.html  wallet.html
